--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "mongodb": "^3.0.10",
-    "mongoose": "^5.1.6"
+    "mongoose": "^5.1.6",
+    "mtg-json": "^1.0.1"
   }
 }
